# EsameLaboratorio

./: CMakeLists.txt  Cell.cpp  Cell.h  Formula.cpp  Formula.h  Max.cpp  Max.h  Mean.cpp  Mean.h  Min.cpp  Min.h  Observer.h  Subject.h  SumFormula.cpp  SumFormula.h  main.cpp
test/: CMakeLists.txt  CellaT.cpp  FormulaTest.cpp  runAllTest.cpp
